Fix overflow error on iPads too that fixes the problem caused by previous commit 8fe03df

--- a/pages/ProcessPage/process.module.css
+++ b/pages/ProcessPage/process.module.css
@@ -54,9 +54,11 @@
 /* Media queries */
 @media only screen and (max-width: 768px) {
     .mobileParaGrid{
-		display:block;
-		margin:8vw;
-		margin-bottom: 10vh;
+		display: flex;
+		margin: 8vw 8vw 10vh;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 	}
 	.paraGrid{
 		display:none;
